--- a/src/Book.css
+++ b/src/Book.css
@@ -1,7 +1,22 @@
+#book-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding-top: 4rem;
+    padding-bottom: -4rem;
+}
+
+@media screen and (min-width: 650px) {
+    #book-section {
+        padding-top: 0rem;
+        padding-bottom: 0rem;
+    }
+}
+
 #book {
     width: 100%;
     height: 100%;
-    position: relative;
     display: flex;
     flex-direction: column;
 }
