--- a/src/Footer.css
+++ b/src/Footer.css
@@ -7,14 +7,27 @@
     width: 100%;
     margin-top: 0;
     box-sizing: border-box;
-  }
+}
 
 #footer p.small {
     text-align: center;
-  }
+}
 
-  img.social-icon {
+div.center-flex {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+img.social-icon {
     width: 30px;
     height: 30px;
     margin: 0px 10px;
-  }
+}
+
+img.social-icon:hover {
+    transform: scale(1.1);
+}
