--- a/src/components/About.css
+++ b/src/components/About.css
@@ -13,21 +13,38 @@
 }
 
 .skills-list {
-    column-count: 1; 
-    column-gap: 3rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     font-size: 1.25rem;
-    margin: 0rem 0rem;
-    list-style-position: inside;
-    text-indent: -1.4em;
-    padding-left: 1.4em;
+    margin: 0;
+    padding: 0;
+    list-style: inside;
 }
 
-@media screen and (min-width: 634px) {
-    .skills-list {
-        column-count: 2; 
-    }
+.skills-list li {
+    box-sizing: border-box;
+    width: auto;
+    margin: 0 2rem;
+}
+
+li {
+    line-height: 2;
+    position: relative;
+}
+  
+li::marker {
+color: #242d57;
+}
+
+.skills-icon {
+    height:2rem;
 }
 
 .detail {
     padding: 1rem 3rem 0;
+}
+
+.padded {
+    padding: 1rem 0;
 }
