--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -51,14 +51,13 @@
   left: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0);
-  background-color: rgba(0, 0, 0, 0); /* Start with a transparent background */
-  color: transparent; /* Make text transparent by default */
+  background-color: rgba(0, 0, 0, 0);
   padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   z-index: 5;
-  transition: background-color 0.3s ease, color 0.3s ease; /* Animate the background color and text color change */
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 /* Hover effect for non-touch devices */
@@ -70,27 +69,27 @@
 
 @media (hover: hover) {
     .project-card:hover .with-image {
-    background-color: rgba(0, 0, 0, 0.7); /* Show the overlay on hover */
-    color: white; /* Make text visible on hover */
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
   }
 }
 
 /* Always show the overlay for touch devices */
 @media (hover: none) {
   .with-image {
-    background-color: rgba(0, 0, 0, 0.7); /* Always show the overlay */
-    color: white; /* Make text always visible for touch devices */
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
     background-color: rgba(0, 0, 0, 0.7);
   }
 }
 
 .icon-overlay {
   position: absolute;
-  top: -1.5rem; /* Adjust this value as needed */
-  right: -1.5rem; /* Adjust this value as needed */
+  top: -1.5rem;
+  right: -1.5rem;
   max-width: 8rem;
   max-height: 8rem;
-  z-index: 10; /* Ensure the icon is above all other content */
+  z-index: 10;
 }
 
 .title-section {
@@ -113,7 +112,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; /* Enhances spacing between elements */
+  justify-content: space-between;
 }
 
 .button {
@@ -130,6 +129,16 @@
   visibility: visible;
 }
 
+.with-image p {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.with-image .button {
+  visibility: hidden;
+  opacity: 0;
+}
+
 .button:hover {
   background-color: #3c415c;
 }
@@ -140,11 +149,21 @@
     visibility: visible;
     opacity: 1;
   }
+
+  .project-card:hover .with-image p {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
 /* Always show the button for touch devices */
 @media (hover: none) {
   .with-image .button {
+    visibility: hidden;
+    opacity: 0;
+  }
+
+  .with-image p {
     visibility: hidden;
     opacity: 0;
   }
