Styled the submit button in the Convertkit form.

--- a/src/components/ConvertkitForm.css
+++ b/src/components/ConvertkitForm.css
@@ -13,6 +13,17 @@
     overflow: visible; /* Ensures icon overflow is visible */
 }
 
+.formkit-submit {
+  background-color: #4e567e;
+  color: #fff;
+  border-radius: 4px;
+  font-weight: 400;
+}
+
+.formkit-submit:hover {
+  background-color: #3c415c;
+}
+
 .formkit-form[data-uid="6d27e157de"] * {
   box-sizing: border-box;
 }
@@ -563,13 +574,4 @@
   -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
-}.formkit-submit {
-  background-color: #4e567e;
-  color: #fff;
-  border-radius: 4px;
-  font-weight: 400;
-}
-
-.formkit-submit:hover {
-  background-color: #3c415c;
 }
