--- a/src/components/ConvertkitForm.css
+++ b/src/components/ConvertkitForm.css
@@ -24,6 +24,13 @@
   background-color: #3c415c;
 }
 
+.formkit-input {
+  border-color: 'rgb(68, 68, 68)';
+  color: 'rgb(0, 0, 0)';
+  border-radius: '4px';
+  font-weight: '400';
+}
+
 .formkit-form[data-uid="6d27e157de"] * {
   box-sizing: border-box;
 }
