--- a/src/components/About.css
+++ b/src/components/About.css
@@ -2,7 +2,7 @@
     background-color: white;
     width: 75%;
     padding: 2rem;
-    margin: auto auto;
+    margin: 2rem auto;
     text-align: center;
 }
 
