--- a/src/components/SubscribeForm.css
+++ b/src/components/SubscribeForm.css
@@ -28,7 +28,6 @@
   border-color: 'rgb(68, 68, 68)';
   color: 'rgb(0, 0, 0)';
   border-radius: '4px';
-  font-weight: '400';
 }
 
 .formkit-form[data-uid="6d27e157de"] * {
@@ -136,10 +135,8 @@
   cursor: pointer;
   display: inline-block;
   text-align: center;
-  font-size: 15px;
-  font-weight: 500;
   cursor: pointer;
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
   overflow: hidden;
   padding: 0;
   position: relative;
@@ -158,18 +155,16 @@
   display: block;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
-  padding: 12px 24px;
+  padding: 0.5rem 1rem;
 }
 
 .formkit-form[data-uid="6d27e157de"] .formkit-input {
   background: #ffffff;
-  font-size: 15px;
   padding: 12px;
   border: 1px solid #e3e3e3;
   -webkit-flex: 1 0 auto;
   -ms-flex: 1 0 auto;
   flex: 1 0 auto;
-  line-height: 1.4;
   margin: 0;
   -webkit-transition: border-color ease-out 300ms;
   transition: border-color ease-out 300ms;
@@ -238,79 +233,6 @@
   padding-right: 25px;
   border: 1px solid #e3e3e3;
   background: #ffffff;
-}
-
-.formkit-form[data-uid="6d27e157de"] [data-group="dropdown"] select:focus {
-  outline: none;
-}
-
-.formkit-form[data-uid="6d27e157de"] [data-group="checkboxes"] {
-  text-align: left;
-  margin: 0;
-}
-
-.formkit-form[data-uid="6d27e157de"] [data-group="checkboxes"] [data-group="checkbox"] {
-  margin-bottom: 10px;
-}
-
-.formkit-form[data-uid="6d27e157de"] [data-group="checkboxes"] [data-group="checkbox"] * {
-  cursor: pointer;
-}
-
-.formkit-form[data-uid="6d27e157de"] [data-group="checkboxes"] [data-group="checkbox"]:last-of-type {
-  margin-bottom: 0;
-}
-
-.formkit-form[data-uid="6d27e157de"] [data-group="checkboxes"] [data-group="checkbox"] input[type="checkbox"] {
-  display: none;
-}
-
-.formkit-form[data-uid="6d27e157de"] [data-group="checkboxes"] [data-group="checkbox"] input[type="checkbox"] + label::after {
-  content: none;
-}
-
-.formkit-form[data-uid="6d27e157de"] [data-group="checkboxes"] [data-group="checkbox"] input[type="checkbox"]:checked + label::after {
-  border-color: #ffffff;
-  content: "";
-}
-
-.formkit-form[data-uid="6d27e157de"] [data-group="checkboxes"] [data-group="checkbox"] input[type="checkbox"]:checked + label::before {
-  background: #10bf7a;
-  border-color: #10bf7a;
-}
-
-.formkit-form[data-uid="6d27e157de"] [data-group="checkboxes"] [data-group="checkbox"] label {
-  position: relative;
-  display: inline-block;
-  padding-left: 28px;
-}
-
-.formkit-form[data-uid="6d27e157de"] [data-group="checkboxes"] [data-group="checkbox"] label::before,
-.formkit-form[data-uid="6d27e157de"] [data-group="checkboxes"] [data-group="checkbox"] label::after {
-  position: absolute;
-  content: "";
-  display: inline-block;
-}
-
-.formkit-form[data-uid="6d27e157de"] [data-group="checkboxes"] [data-group="checkbox"] label::before {
-  height: 16px;
-  width: 16px;
-  border: 1px solid #e3e3e3;
-  background: #ffffff;
-  left: 0px;
-  top: 3px;
-}
-
-.formkit-form[data-uid="6d27e157de"] [data-group="checkboxes"] [data-group="checkbox"] label::after {
-  height: 4px;
-  width: 8px;
-  border-left: 2px solid #4d4d4d;
-  border-bottom: 2px solid #4d4d4d;
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  left: 4px;
-  top: 8px;
 }
 
 .formkit-form[data-uid="6d27e157de"] .formkit-alert {
@@ -547,9 +469,6 @@
   margin: 0;
 }
 
-.formkit-form[data-uid="6d27e157de"] .formkit-submit {
-  position: static;
-}
 
 .formkit-form[data-uid="6d27e157de"][min-width~="700"] [data-style="clean"],
 .formkit-form[data-uid="6d27e157de"][min-width~="800"] [data-style="clean"] {
