--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -40,6 +40,15 @@
   font-weight: 400;
 }
 
+.blog-post code {
+  display: inline-block;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  padding: 1rem 1rem;
+  border-radius: 0.25rem;
+}
+
 @media screen and (max-width: 37.5rem) {
   .blog-container {
     padding: 0.625rem;
