--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -25,6 +25,7 @@
 
 .blog-post h2 {
   font-size: 1.8rem;
+  padding-top: 3rem;
   margin-bottom: 0.625rem;
   line-height: 1.3;
 }
@@ -55,6 +56,17 @@
   color: #fff;
   padding: 1rem;
   border-radius: 0.25rem;
+}
+
+.blog-post code.inline {
+  display: inline;
+  width: auto;
+  background-color: #fff;
+  color: purple;
+  padding: 0rem 0.2rem;
+  border-radius: 0.2rem;
+  border-style: dotted;
+  border-color: rgba(128, 0, 128, 0.5); /* Changed to semi-transparent purple */
 }
 
 @media screen and (max-width: 37.5rem) {
