--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -18,6 +18,34 @@ const { post } = Astro.props;
 const pageTitle = `${post.title.slice(0, 60)} | Christopher Carroll Smith`;
 const pageDescription = post.excerpt.slice(0, 155) + '...';
 const pageImage = post.image || '/images/Chris_landscape.jpg';
+const siteURL = 'https://christophercarrollsmith.com';
+const postURL = `${siteURL}/blog/${post.id}`;
+const absoluteImage = pageImage.startsWith('http') ? pageImage : `${siteURL}/${pageImage}`;
+
+// Schema.org structured data for the article
+const structuredData = {
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": post.title,
+  "description": post.excerpt,
+  "image": absoluteImage,
+  "datePublished": post.date,
+  "dateModified": post.date,
+  "author": {
+    "@type": "Person",
+    "name": "Christopher Carroll Smith",
+    "url": siteURL
+  },
+  "publisher": {
+    "@type": "Person",
+    "name": "Christopher Carroll Smith",
+    "url": siteURL
+  },
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": postURL
+  }
+};
 ---
 
 <BaseLayout
@@ -25,7 +53,18 @@ const pageImage = post.image || '/images/Chris_landscape.jpg';
   description={pageDescription}
   image={pageImage}
   type="article"
+  canonicalURL={postURL}
 >
+  <Fragment slot="head">
+    <!-- Article metadata -->
+    <meta property="article:published_time" content={post.date} />
+    <meta property="article:modified_time" content={post.date} />
+    <meta property="article:author" content="Christopher Carroll Smith" />
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json" set:html={JSON.stringify(structuredData)} />
+  </Fragment>
+
   <div class="App">
     <HeaderAstro />
     <div class="blog-container">
