--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import HeaderAstro from '../components/HeaderAstro.astro';
-import HomeClient from '../components/HomeClient.jsx';
-import About from '../components/About.jsx';
-import Projects from '../components/Projects.jsx';
-import ProjectFeature from '../components/ProjectFeature.jsx';
-import Writing from '../components/Writing.jsx';
-import Book from '../components/Book.jsx';
-import Footer from '../components/Footer.jsx';
+import HomeClient from '../components/HomeClient.tsx';
+import About from '../components/About.tsx';
+import Projects from '../components/Projects.tsx';
+import ProjectFeature from '../components/ProjectFeature.tsx';
+import Writing from '../components/Writing.tsx';
+import Book from '../components/Book.tsx';
+import Footer from '../components/Footer.tsx';
 import '../App.css';
 ---
 
