--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,9 +1,12 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
 import HeaderAstro from '../../components/HeaderAstro.astro';
-import Footer from '../../components/Footer.jsx';
+import Footer from '../../components/Footer.tsx';
 import blogData from '../../data/blogs.json';
+import type { BlogPost } from '../../types/data';
 import '../../components/Blog.css';
+
+const typedBlogData = blogData as BlogPost[];
 ---
 
 <BaseLayout
@@ -15,7 +18,7 @@ import '../../components/Blog.css';
     <HeaderAstro />
     <div class="blog-container">
       <h1>Blog</h1>
-      {blogData.map((post) => (
+      {typedBlogData.map((post) => (
         <article id={String(post.id)} key={post.id} class="blog-post-summary">
           <h2>
             <a href={`/blog/${post.id}`}>{post.title}</a>
