Clean up Events styling issues

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import '../App.css';
     <About client:load />
     <Projects client:load />
     <ProjectFeature client:load />
-    <Writing client:load />
+    <Writing client:only="react" />
     <Events client:only="react" />
     <Footer client:load />
   </div>
