--- a/src/components/Events.css
+++ b/src/components/Events.css
@@ -3,35 +3,26 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    padding-top: 4rem;
-    padding-bottom: 4rem;
 }
 
-@media screen and (min-width: 650px) {
-    #events-section {
-        padding-top: 4rem;
-        padding-bottom: 4rem;
-    }
-}
-
-#events {
-    width: 100%;
-    max-width: 800px;
-    display: flex;
-    flex-direction: column;
-    padding: 0 1rem;
-}
-
-.headercontainer {
+.events-content {
+    background-color: white;
+    width: 75%;
+    padding: 2rem;
+    margin: 2rem auto;
     text-align: center;
 }
 
-.headercontainer h1 {
-    padding-top: 3rem;
-    padding-bottom: 2rem;
+@media screen and (min-width: 1282px) {
+    .events-content {
+        width: 50%;
+    }
+}
+
+.events-content h1 {
+    margin-bottom: 2rem;
 }
 
 #calendar {
     width: 100%;
-    min-height: 400px;
 }
