--- a/src/components/HeaderAstro.astro
+++ b/src/components/HeaderAstro.astro
@@ -9,7 +9,7 @@ const currentPath = Astro.url.pathname;
   <a href="/#about">About</a>
   <a href="/#projects">Projects</a>
   <a href="/#writing">Writing</a>
-  <a href="/#book">Book a Meeting</a>
+  <a href="/#events-section">Events</a>
   <a href="/blog" class:list={[{ active: currentPath.startsWith('/blog') }]}>Blog</a>
 </div>
 
