JSON->HTML rather than PDF CV

--- a/src/components/HeaderAstro.astro
+++ b/src/components/HeaderAstro.astro
@@ -9,6 +9,7 @@ const currentPath = Astro.url.pathname;
   <a href="/#about">About</a>
   <a href="/#projects">Projects</a>
   <a href="/#writing">Writing</a>
-  <a href="/#events-section">Events</a>
+  <a href="/#events">Events</a>
+  <a href="/cv" class:list={[{ active: currentPath.startsWith('/cv') }]}>CV</a>
   <a href="/blog" class:list={[{ active: currentPath.startsWith('/blog') }]}>Blog</a>
 </div>
