Resolve Lighthouse lints

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -17,7 +17,7 @@ import '../pages/_cv.css';
 >
   <Fragment slot="head">
     <!-- Schema.org markup for Person -->
-    <script type="application/ld+json">
+    <script type="application/ld+json" is:inline>
       {
         "@context": "https://schema.org",
         "@type": "Person",
