--- a/src/pages/_cv.css
+++ b/src/pages/_cv.css
@@ -27,7 +27,7 @@
   align-items: center;
 }
 
-@media screen and (max-width: 37.5rem) {
+@media screen and (max-width: 767px) {
   .cv-container {
     padding: 2rem 0.625rem;
   }
